refactor($spring-integration-kafka): rename project as spring-kafka-flow